2005-04-18 16:05 Bill Jones <w.t.jones@larc.nasa.gov>

	* This revision marks a change to the API to support CAPRI 2
	* src/gridfortran.c (gridparallelloadcapri_) add "url" argument
	to support client/server CAPRI 2 use.
	* src/grid.h (struct Grid) add "model" member to store CAPRI 2
	model index.
	* src/gridgeom.c (gridParallelGeomLoad) add "url" argument
	to support client/server CAPRI 2 use and use CADGeom_LoadModel()
	if compiled with -DHAVE_CAPRI2
	* src/gridgeom.c (gridParallelGeomSave) use CADGeom_SaveModel()
	if compiled with -DHAVE_CAPRI2

2005-04-18 15:50 Mike Park  <mike.park@nasa.gov>

	* src/gridfortran.c (gridapplyqueue_) create a temperary queue
	object to handle the apply operation. This will prevent a confict
	with multiprocessor (colored) border swaps. This elimates reuse
	of the static queue object and a queueReset(queue) call.
	* src/gridfortran.c (queuedump_) moved the queueReset(queue)
	call from gridapplyqueue_, this is to fix a logic bug that
	existed for a long time but hadd no effect. this needed to be 
	cleaned up inorder to border swap with colors.

2005-04-18 12:18 Mike Park  <mike.park@nasa.gov>

	* src/gridfortran.c (gridglobalshift_) also calls
	queueGlobalShiftNode, queueGlobalShiftCell to enable
	colors durring parallel swap.

2005-04-18 11:33 Mike Park  <mike.park@nasa.gov>

	* src/queue.c (queueGlobalShiftNode) added.
	* src/queue.c (queueGlobalShiftCell) added.
	
2005-04-18 09:24 Mike Park  <mike.park@nasa.gov>

	* src/gridmpi.c (gridNodeCountByPartition) removed
	* src/gridmpi.c (gridGhostDataCountByPartition) added. This
	routine supplies low-level unit tested support to 
	gridfortran.c:gridghostcount_ and gets rid of
	redundancy between gridnodecountbypartition_ and gridghostcount_.
	* src/gridfortran.c (gridnodecountbypartition_) removed
	* src/gridfortran.c (gridghostcount_) exposes 
	gridmpi.c:gridGhostDataCountByPartition

2005-04-12 00:08 Mike Park  <mike.park@nasa.gov>
